--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile files('libs/BmobSDK_V3.4.5_1111.jar')
+    compile files('libs/hellocharts-library-1.5.8.jar')
 }
