--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile files('libs/Bmob_Push_V1.0.0beta_20160627.jar')
     compile 'com.squareup.okhttp:okhttp:2.4.0'
+    //
+    compile 'com.android.support:cardview-v7:23.1.1'
 }
