--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,13 +38,11 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:parentActivityName=".view.activity.TypeActivity"
             android:name=".view.activity.ExamActivity"
             android:label="@string/title_activity_exam"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".view.activity.OutlineActivity"
-            android:label="@string/title_activity_outline"
-            android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".view.activity.ChaptersActivity"
             android:label="@string/title_activity_chapters"
