--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
     <application
         android:name=".model.Application.App"
         android:allowBackup="true"
-        android:icon="@drawable/icon"
+        android:icon="@drawable/icon_white_back"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
